# Videos

./: .clang-format  .gitignore  CMakeLists.txt  outline.txt  readme.md
res/: components.vlk
res/QuickHull/: IntenseExtract.glf  Tonemap.glf
src/: Animations.cc  CMakeLists.txt  EventSequence.cc  EventSequence.h  Main.cc  QuickHull.cc  QuickHull.h  Sequence.cc  Sequence.h  TheFundamentalsOfGraphics.h  Video.cc  Video.h
src/TheFundamentalsOfGraphics/: Sequence.h  outline.txt  script.txt
working/: assets.vlk  components.vlk
